building the Stories Section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,25 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>    
                 </div>
 
+                <section class="section-stories">
+                    <div class="u-center-text u-margin-bottom-big">
+                        <h2 class="heading-secondary">
+                            We make people genuinely happy
+                        </h2>
+                        <div class="row">
+                            <div class="story">
+                                <figure class="story__shape">
+                                    <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                                </figure>
+                                <div class="story__text">
+                                    <h3 class="heading-tertiary u-margin-bottom-small">I had the  best week with my family</h3>
+                                    <p>Ullamco in velit veniam enim Lorem est cillum pariatur dolore laborum. Nulla occaecat enim mollit ad ex adipisicing proident Lorem. Labore eu exercitation laboris consequat occaecat in consectetur duis. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
 
            </section>
 
