--- a/index.html
+++ b/index.html
@@ -27,69 +27,69 @@
         </header>
 
         <main>
-           <section class="section-about">
-               <div class="u-center-text u-margin-bottom-big">
-                  <h2 class="heading-secondary">
-                    Exciting tours for adventurous people
-                  </h2>
-               </div>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
 
-               <div class="row">
-                  <div class="col-1-of-2">
-                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
-                    <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis. Nullam egestas libero nibh, eu tincidunt velit faucibus sed. 
-                    </p>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
-                    <p class="paragraph">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis. Nullam egestas libero nibh, eu tincidunt velit faucibus sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra.
-                    </p>
-                    <a href="#" class="btn-text">Learn more &rarr;</a>
-                  </div>
-                  <div class="col-1-of-2">
-                    <div class="composition">
-                      <img src="img/nat-1-large.jpg" alt="Photo-1" class="composition__photo composition__photo--p1">
-                      <img src="img/nat-2-large.jpg" alt="Photo-2" class="composition__photo composition__photo--p2">
-                      <img src="img/nat-3-large.jpg" alt="Photo-3" class="composition__photo composition__photo--p3">
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis. Nullam egestas libero nibh, eu tincidunt velit faucibus sed. 
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis. Nullam egestas libero nibh, eu tincidunt velit faucibus sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra.
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
-                  </div>
-              </div>
-           </section>
-
-           <section class="section-features">
-            <div class="row">
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-world"></i>
-                        <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Explore the world</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo-1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo-2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo-3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-compass"></i>
-                        <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Meet nature</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
-                    </div>
-                </div>               
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-map"></i>
-                        <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Find your way</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
-                    </div>
-                </div>               
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-heart"></i>
-                        <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
-                    </div>
-                </div>               
-            </div>
-           </section>
+            </section>
 
-           <section class="section-tours">
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
+                        </div>
+                    </div>               
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
+                        </div>
+                    </div>               
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="feature-box__text heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor purus accumsan justo vehicula, eu tincidunt ligula facilisis.
+                        </div>
+                    </div>               
+                </div>
+            </section>
+
+            <section class="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -194,29 +194,54 @@
                 <div class="u-center-text u-margin-top-huge">
                     <a href="#" class="btn btn--green">Discover all tours</a>    
                 </div>
+            </section>
 
-                <section class="section-stories">
-                    <div class="u-center-text u-margin-bottom-big">
-                        <h2 class="heading-secondary">
-                            We make people genuinely happy
-                        </h2>
-                        <div class="row">
-                            <div class="story">
-                                <figure class="story__shape">
-                                    <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
-                                </figure>
-                                <div class="story__text">
-                                    <h3 class="heading-tertiary u-margin-bottom-small">I had the  best week with my family</h3>
-                                    <p>Ullamco in velit veniam enim Lorem est cillum pariatur dolore laborum. Nulla occaecat enim mollit ad ex adipisicing proident Lorem. Labore eu exercitation laboris consequat occaecat in consectetur duis. </p>
-                                </div>
-                            </div>
+            <section class="section-stories">
+
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                        Your browser is not supported!
+                    </video>
+                </div>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Mary Smith</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">I had the  best week with my family</h3>
+                            <p>Ullamco in velit veniam enim Lorem est cillum pariatur dolore laborum. Nulla occaecat enim mollit ad ex adipisicing proident Lorem. Labore eu exercitation laboris consequat occaecat in consectetur duis. </p>
                         </div>
                     </div>
-                </section>
+                </div>
 
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+                            <p>Ullamco in velit veniam enim Lorem est cillum pariatur dolore laborum. Nulla occaecat enim mollit ad ex adipisicing proident Lorem. Labore eu exercitation laboris consequat occaecat in consectetur duis. </p>
+                        </div>
+                    </div>
+                </div>
 
-           </section>
-
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>    
+                </div>
+            </section>
         </main>
 
     
